Revision history for Test-Kwalitee

{{$NEXT}}

1.23      2016-10-14 01:17:11Z
    - update the list of metrics to the latest Module::CPANTS::Analyse

1.22      2014-08-16 03:25:59Z
    - do not stop running tests at the first failure (broken since 1.20)

1.21      2014-08-16 00:12:37Z
    - document metrics added in Module::CPANTS::Analyse 0.93_03

1.20      2014-08-10 02:57:00Z (TRIAL RELEASE)
    - running the tests via the import method directly has been deprecated;
      the new kwalitee_ok() function is added to provide a more sane and
      logical layout to your tests.

1.19      2014-07-19 17:01:08Z
    - kwalitee-metrics script now includes the module version as well as the
      name, for each metric provided
    - remove test that is rendered invalid with upcoming changes to
      Test::Builder (1.005+)
    - document new metrics added in Module::CPANTS::Analyse 0.93_01

1.18      2014-01-22 04:47:40Z
    - updated list of available metrics

1.17      2013-10-20 21:49:31Z
    - oops, fixed tests that break when AUTHOR_TESTING is not set

1.16      2013-10-20 21:44:53Z
    - now printing even more diagnostics on error (as much as we have
      available)

1.15      2013-09-25 03:12:20Z
    - re-release with fixed compile test

1.14      2013-09-04 01:38:29Z
    - updated inaccurate test prereq

1.13      2013-08-21 20:03:31Z
    - added missing abstract for kwalitee-metrics script
    - no longer issuing a warning if the test is running from xt/ (see v1.10)

1.12      2013-08-01 23:09:47Z
    - adjusted tests to compensate for changes made in Module::CPANTS::Analyse
      0.88/0.90_01

1.11      2013-07-30 00:27:36Z
    - added missing kwalitee-metrics executable to the distribution

1.10      2013-07-29 00:18:31Z
    - we now issue a warning if running when neither AUTHOR_TESTING or
      RELEASE_TESTING environment variables or set
    - test level adjusted, so location of failing test is correct